--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,6 @@
       "use": "@vercel/python"
     },
     {
-      "src": "app.py",
-      "use": "@vercel/python"
-    },
-    {
       "src": "templates/**",
       "use": "@vercel/static"
     }
@@ -17,30 +13,15 @@
   "routes": [
     {
       "src": "/",
-      "dest": "/index.html"
+      "dest": "/templates/index.html"
     },
     {
-      "src": "/digests",
-      "dest": "/digests.html"
+      "src": "/api/trigger",
+      "dest": "/api/trigger.py"
     },
     {
-      "src": "/digest/(.+)",
-      "dest": "/digest_$1.html"
-    },
-    {
-      "src": "/api/(.+)",
-      "src": "api/$1"
-    },
-    {
-      "src": "/generate",
-      "dest": "api/generate.py"
-    },
-    {
-      "src": "/health",
-      "dest": "api/health.py"
+      "src": "/api/health",
+      "dest": "/api/health.py"
     }
-  ],
-  "env": {
-    "PYTHONPATH": "."
-  }
+  ]
 }
